--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -47,12 +47,12 @@
     }
 
     .table-danger {
-        --bs-table-accent-bg: #f8d7da;
+        --bs-table-accent-bg: #f8d7da!important;
         font-weight: bold;
     }
 
     .table-danger.-full {
-        --bs-table-accent-bg: #fe536a;
+        --bs-table-accent-bg: #fe536a!important;
         font-weight: bold;
     }
 
