--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -1,12 +1,9 @@
-{% load static %}
 {% load crispy_forms_tags %}
 {% load i18n %}
 
 <form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" data-chained-dropdown="plans_copy" autocomplete="off" tabindex="-1">
     {% csrf_token %}
-    <script src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
-    <script src="{% static 'bootstrap_datepicker/js/bootstrap-datetimepicker-4.17.47.min.js' %}"></script>
-    <script src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
+    {% include 'core/includes/form_date_scripts.html' %}
     <div class="modal-header">
         <h5 class="modal-title">{{ title }}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% translate 'Close' %}"></button>
