--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -406,7 +406,7 @@ input.form-check-input.is-invalid:checked {
     background-color: #d9d9d9;
 }
 
-.fees {
+.fee {
     background-color: #ffdddd;
 }
 
