--- a/project/transactions/templates/transactions/includes/savings_change_list.html
+++ b/project/transactions/templates/transactions/includes/savings_change_list.html
@@ -1,3 +1,3 @@
 {% load table %}
 
-{% table 'transactions:savings_change_update' 'transactions:savings_change_delete' fees=True %}
+{% table 'transactions:savings_change_update' 'transactions:savings_change_delete' fee=True %}
