--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -68,8 +68,8 @@
             </div>
 
             <div class="col-lg-12 col-md-3">
-                <!-- Debts Lent -->
-                <div id="lent">{% info_table lent %}</div>
+                <!-- Debts Debt -->
+                <div id="debt">{% info_table debt %}</div>
             </div>
         </div>
     </div>
