--- a/project/debts/templates/debts/includes/lents_return_delete_form.html
+++ b/project/debts/templates/debts/includes/lents_return_delete_form.html
@@ -1,4 +1,4 @@
 {% load form %}
 {% load i18n %}
 
-{% generic_delete_form title=_('Delete') update_container='lent_return' %}
+{% generic_delete_form title=_('Delete') update_container='debt_return' %}
