--- a/project/debts/templates/debts/includes/lents_list.html
+++ b/project/debts/templates/debts/includes/lents_list.html
@@ -19,8 +19,8 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'debts:lents_update' item.id as url_update %}
-        {% url 'debts:lents_delete' item.id as url_delete %}
+        {% url 'debts:debts_update' item.id as url_update %}
+        {% url 'debts:debts_delete' item.id as url_delete %}
         <tr data-url="" class="dblclick">
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.name }}</td>
@@ -29,8 +29,8 @@
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{% if item.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
-            {% edit_cell url=url_update target="lent" %}
-            {% delete_cell url=url_delete target="lent" %}
+            {% edit_cell url=url_update target="debt" %}
+            {% delete_cell url=url_delete target="debt" %}
         </tr>
         {% endfor %}
     </tbody>
