--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -23,19 +23,19 @@
         </div>
     </div>
 
-    <!-- Lent -->
+    <!-- Debt -->
     <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
-                <h6>{% translate 'Lent' %}</h6>
+                <h6>{% translate 'Debt' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:lents_new' %}" data-target="lent"><i class="bi bi-plus"></i>{% translate "Debt" context "debt button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' %}" data-target="debt"><i class="bi bi-plus"></i>{% translate "Debt" context "debt button" %}</button>
             </div>
         </div>
 
         <div class="row">
-            <div class="col" id="lent">{{ lent }}</div>
+            <div class="col" id="debt">{{ debt }}</div>
         </div>
     </div>
 </div>
@@ -57,19 +57,19 @@
         </div>
     </div>
 
-    <!-- Lent Return -->
+    <!-- Debt Return -->
     <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
-                <h6>{% translate 'Returned lent' %}</h6>
+                <h6>{% translate 'Returned debt' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:lents_return_new' %}" data-target="lent"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' %}" data-target="debt"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
             </div>
         </div>
 
         <div class="row">
-            <div class="col" id="lent_return">{{ lent_return }}</div>
+            <div class="col" id="debt_return">{{ debt_return }}</div>
         </div>
     </div>
 </div>
@@ -92,9 +92,9 @@
             blocks.push("borrow", "borrow_return");
         }
 
-        if (target == 'lent') {
-            url = `{% url 'debts:lents_reload' %}`;
-            blocks.push("lent", "lent_return");
+        if (target == 'debt') {
+            url = `{% url 'debts:debts_reload' %}`;
+            blocks.push("debt", "debt_return");
         }
 
         $.ajax({
