back debts to lend

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -68,8 +68,8 @@
             </div>
 
             <div class="col-lg-12 col-md-3">
-                <!-- Debts Debt -->
-                <div id="debt">{% info_table debt %}</div>
+                <!-- Debts Lend -->
+                <div id="lend">{% info_table lend %}</div>
             </div>
         </div>
     </div>
