--- a/project/debts/templates/debts/includes/debts_list.html
+++ b/project/debts/templates/debts/includes/debts_list.html
@@ -29,8 +29,8 @@
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{% if item.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
-            {% edit_cell url=url_update target="debt" %}
-            {% delete_cell url=url_delete target="debt" %}
+            {% edit_cell url=url_update target="TTT" %}
+            {% delete_cell url=url_delete target="TTT" %}
         </tr>
         {% endfor %}
     </tbody>
