--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -14,7 +14,7 @@
         <div class="row py-2">
             <div class="col"><h6>{% translate 'Borrow' %}</h6></div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:borrows_new' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Debt" context "debt button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
             </div>
         </div>
 
@@ -30,12 +30,12 @@
                 <h6>{% translate 'Debt' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' %}" data-target="debt"><i class="bi bi-plus"></i>{% translate "Debt" context "debt button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' %}" data-target="debt"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
             </div>
         </div>
 
         <div class="row">
-            <div class="col" id="debt">{{ debt }}</div>
+            <div class="col" id="lend">{{ lend }}</div>
         </div>
     </div>
 </div>
@@ -48,7 +48,7 @@
                 <h6>{% translate 'Returned borrow' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:borrows_return_new' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
             </div>
         </div>
 
@@ -61,15 +61,15 @@
     <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
-                <h6>{% translate 'Returned debt' %}</h6>
+                <h6>{% translate 'Returned lend' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' %}" data-target="debt"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' %}" data-target="lend"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
             </div>
         </div>
 
         <div class="row">
-            <div class="col" id="debt_return">{{ debt_return }}</div>
+            <div class="col" id="lend_return">{{ lend_return }}</div>
         </div>
     </div>
 </div>
@@ -88,13 +88,13 @@
 
 
         if (target == 'borrow') {
-            url = `{% url 'debts:borrows_reload' %}`;
+            url = ``;
             blocks.push("borrow", "borrow_return");
         }
 
-        if (target == 'debt') {
-            url = `{% url 'debts:debts_reload' %}`;
-            blocks.push("debt", "debt_return");
+        if (target == 'lend') {
+            url = `{% url 'debts:lend_reload' %}`;
+            blocks.push("lend", "lend_return");
         }
 
         $.ajax({
