update debts forms

--- a/project/debts/templates/debts/includes/debts_return_delete_form.html
+++ b/project/debts/templates/debts/includes/debts_return_delete_form.html
@@ -1,4 +1,7 @@
 {% load form %}
 {% load i18n %}
+{% load slippers %}
 
-{% generic_delete_form title=_('Delete') update_container='debt_return' %}
+{% var target=request.resolver_match.kwargs.type|add:'_return' %}
+
+{% generic_delete_form title=_('Delete') update_container=target %}
