--- a/project/debts/templates/debts/includes/debts_list.html
+++ b/project/debts/templates/debts/includes/debts_list.html
@@ -4,11 +4,16 @@
 
 {% if items %}
 
+{% var target=request.resolver_match.kwargs.type %}
+
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
             <th class="w5">{% translate 'Date' %}</th>
-            <th class="w8">{% translate 'Lender' %}</th>
+            <th class="w8">
+                {% if target == 'lend' %}{% translate 'Borrower' %}{% endif %}
+                {% if target == 'borrow' %}{% translate 'Lender' %}{% endif %}
+            </th>
             <th class="w5">{% translate 'Sum' %}</th>
             <th class="w5">{% translate 'Returned' %}</th>
             <th class="w10">{% translate 'Account' %}</th>
@@ -19,8 +24,8 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'debts:debts_update' item.id as url_update %}
-        {% url 'debts:debts_delete' item.id as url_delete %}
+        {% url 'debts:debts_update' target item.id as url_update %}
+        {% url 'debts:debts_delete' target item.id as url_delete %}
         <tr data-url="" class="dblclick">
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.name }}</td>
@@ -29,8 +34,8 @@
             <td class="text-start">{{ item.account }}</td>
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{% if item.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
-            {% edit_cell url=url_update target="TTT" %}
-            {% delete_cell url=url_delete target="TTT" %}
+            {% edit_cell url=url_update target=target %}
+            {% delete_cell url=url_delete target=target %}
         </tr>
         {% endfor %}
     </tbody>
