--- a/project/debts/templates/debts/includes/debts_return_list.html
+++ b/project/debts/templates/debts/includes/debts_return_list.html
@@ -4,11 +4,16 @@
 
 {% if items %}
 
+{% var target=request.resolver_match.kwargs.type %}
+
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
             <th class="w5">{% translate 'Date' %}</th>
-            <th class="w8">{% translate 'Lender' %}</th>
+            <th class="w8">
+                {% if target == 'lend' %}{% translate 'Borrower' %}{% endif %}
+                {% if target == 'borrow' %}{% translate 'Lender' %}{% endif %}
+            </th>
             <th class="w10">{% translate 'Sum' %}</th>
             <th class="w10">{% translate 'Account' %}</th>
             <th>{% translate 'Remark' %}</th>
@@ -18,8 +23,8 @@
     </thead>
     <tbody>
         {% for item in items %}
-        {% url 'debts:debts_return_update' item.id as url_update %}
-        {% url 'debts:debts_return_delete' item.id as url_delete %}
+        {% url 'debts:debts_return_update' target item.id as url_update %}
+        {% url 'debts:debts_return_delete' target item.id as url_delete %}
         <tr data-url="" class="dblclick" {% ifchanged item.debt.name or ifchanged item.debt.closed %}{% if not forloop.first %}style="border-top: 5px #c0c0c0 solid;"{% endif %}{% endifchanged %}>
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
             <td class="text-start">{{ item.debt.name }}</td>
@@ -28,8 +33,8 @@
             <td class="text-start">{{ item.remark }}</td>
             <td class="text-center">{% if item.debt.closed %}<i class="bi bi-check-circle-fill"></i>{% endif %}</td>
             {% if not item.debt.closed %}
-            {% edit_cell url=url_update target="debt" %}
-            {% delete_cell url=url_delete target="debt" %}
+            {% edit_cell url=url_update target=target %}
+            {% delete_cell url=url_delete target=target %}
             {% else %}
             <td colspan="2"></td>
             {% endif %}
