--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -14,7 +14,7 @@
         <div class="row py-2">
             <div class="col"><h6>{% translate 'Borrow' %}</h6></div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' 'borrow' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
             </div>
         </div>
 
@@ -27,10 +27,10 @@
     <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
-                <h6>{% translate 'Debt' %}</h6>
+                <h6>{% translate 'Lend' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' %}" data-target="debt"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' 'lend' %}" data-target="lend"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
             </div>
         </div>
 
@@ -48,7 +48,7 @@
                 <h6>{% translate 'Returned borrow' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' 'borrow' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
             </div>
         </div>
 
@@ -61,10 +61,10 @@
     <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
-                <h6>{% translate 'Returned lend' %}</h6>
+                <h6>{% translate 'Lend return' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' %}" data-target="lend"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' 'lend' %}" data-target="lend"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
             </div>
         </div>
 
@@ -88,12 +88,12 @@
 
 
         if (target == 'borrow') {
-            url = ``;
+            url = `{% url 'debts:debts_reload' 'borrow' %}`;
             blocks.push("borrow", "borrow_return");
         }
 
         if (target == 'lend') {
-            url = `{% url 'debts:lend_reload' %}`;
+            url = `{% url 'debts:debts_reload' 'lend' %}`;
             blocks.push("lend", "lend_return");
         }
 
