borrow return translation

--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -45,7 +45,7 @@
     <div class="col-sm-12 col-lg-6">
         <div class="row py-2">
             <div class="col">
-                <h6>{% translate 'Returned borrow' %}</h6>
+                <h6>{% translate 'Borrow return' %}</h6>
             </div>
             <div class="col text-end">
                 <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_return_new' 'borrow' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Sum" context "sum button" %}</button>
