--- a/project/users/templates/users/password_reset_done.html
+++ b/project/users/templates/users/password_reset_done.html
@@ -6,7 +6,7 @@
     <div class="card-body">
         <h3 class="card-title">{{ card_title }}</h3>
         {% if card_text %}<p>{{ card_text }}</p>{% endif %}
-        <a href="{% url 'users:login' %}" class="btn btn-sm btn-secondary">{% translate 'Return to Log In' %}</a>
+        <a href="{% url 'users:login' %}" class="btn btn-sm btn-secondary">{% translate 'Return to Log in' %}</a>
     </div>
 </div>
 {% endblock %}
