rename debt type

--- a/project/debts/templates/debts/includes/debts_list.html
+++ b/project/debts/templates/debts/includes/debts_list.html
@@ -4,7 +4,7 @@
 
 {% if items %}
 
-{% var target=request.resolver_match.kwargs.type %}
+{% var target=request.resolver_match.kwargs.debt_type %}
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
