--- a/project/core/templates/core/includes/generic_formset.html
+++ b/project/core/templates/core/includes/generic_formset.html
@@ -16,6 +16,12 @@
 
         {% for field in shared_form %}{{ field|as_crispy_field }}{% endfor %}
 
+        {% if formset.non_form_errors %}
+        <div class="alert alert-danger">
+        {% for error in formset.non_form_errors %}<strong>{{ error|escape }}</strong>{% endfor %}
+        </div>
+        {% endif %}
+
         {% for form in formset.forms %}
         {% include 'core/includes/form_errors.html' %}
 
