--- a/project/expenses/templates/expenses/index.html
+++ b/project/expenses/templates/expenses/index.html
@@ -117,5 +117,7 @@
     });
 
 </script>
+
 <script src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/paging.js' %}"></script>
 {% endblock content %}
