--- a/project/core/templates/core/includes/paging.html
+++ b/project/core/templates/core/includes/paging.html
@@ -2,7 +2,7 @@
 
 <ul class="pagination justify-content-center flex-wrap mt-2 mb-4">
     {% if page_obj.has_previous %}
-        <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ page_obj.previous_page_number|title }}" data-search="{{ search }}" data-container="expenses_list">&laquo;</a></li>
+        <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ page_obj.previous_page_number|title }}" data-search="{{ search }}" data-container="{{ container }}">&laquo;</a></li>
     {% else %}
         <li class="disabled page-item"><span class="page-link">&laquo;</span></li>
     {% endif %}
@@ -14,12 +14,12 @@
             {% if i == page_obj.paginator.ELLIPSIS %}
                 <li class="page-item"><span class="page-link">{{ i|title }}</span></li>
             {% else %}
-                <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ i|title }}" data-search="{{ search }}" data-container="expenses_list">{{ i|title }}</a></li>
+                <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ i|title }}" data-search="{{ search }}" data-container="{{ container }}">{{ i|title }}</a></li>
             {% endif %}
         {% endif %}
     {% endfor %}
     {% if page_obj.has_next %}
-        <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ page_obj.next_page_number|title }}" data-search="{{ search }}" data-container="expenses_list">&raquo;</a></li>
+        <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ page_obj.next_page_number|title }}" data-search="{{ search }}" data-container="{{ container }}">&raquo;</a></li>
     {% else %}
         <li class="disabled page-item"><span class="page-link">&raquo;</span></li>
     {% endif %}
