--- a/project/core/templates/core/includes/paging.html
+++ b/project/core/templates/core/includes/paging.html
@@ -1,11 +1,14 @@
 {% if page_obj.paginator.num_pages > 1 %}
 
 <ul class="pagination justify-content-center flex-wrap mt-2 mb-4">
+    <!-- previous button -->
     {% if page_obj.has_previous %}
         <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ page_obj.previous_page_number|title }}" data-search="{{ search }}" data-container="{{ container }}">&laquo;</a></li>
     {% else %}
         <li class="disabled page-item"><span class="page-link">&laquo;</span></li>
     {% endif %}
+
+    <!-- pages -->
     {% for i in page_range|default_if_none:page_obj.paginator.get_elided_page_range %}
         {% if page_obj.number == i %}
             <li class="active page-item"><span class="page-link">{{ i|title }} <span class="sr-only">(current)</span></span>
@@ -18,11 +21,14 @@
             {% endif %}
         {% endif %}
     {% endfor %}
+
+    <!-- next button -->
     {% if page_obj.has_next %}
         <li class="page-item"><a class="page-link paging" role="button" data-url="{{ url }}" data-page="{{ page_obj.next_page_number|title }}" data-search="{{ search }}" data-container="{{ container }}">&raquo;</a></li>
     {% else %}
         <li class="disabled page-item"><span class="page-link">&raquo;</span></li>
     {% endif %}
+
 </ul>
 
 {% endif %}
