--- a/project/incomes/templates/incomes/index.html
+++ b/project/incomes/templates/incomes/index.html
@@ -5,6 +5,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="{% static 'css/css-loader.css' %}">
+<script src="{% static 'js/reload_stats.js' %}"></script>
 
 <style>
     .incomes-types-col {
@@ -47,4 +48,6 @@
 </div>
 
 <script src="{% static 'js/search.js' %}"></script>
+<script src="{% static 'js/paging.js' %}"></script>
+
 {% endblock content %}
