debt add button transalation

--- a/project/debts/templates/debts/index.html
+++ b/project/debts/templates/debts/index.html
@@ -14,7 +14,7 @@
         <div class="row py-2">
             <div class="col"><h6>{% translate 'Borrow' %}</h6></div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' 'borrow' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' 'borrow' %}" data-target="borrow"><i class="bi bi-plus"></i>{% translate "Debt" context "debt button" %}</button>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
                 <h6>{% translate 'Lend' %}</h6>
             </div>
             <div class="col text-end">
-                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' 'lend' %}" data-target="lend"><i class="bi bi-plus"></i>{% translate "Lend" context "lend button" %}</button>
+                <button type="button" class="btn btn-sm btn-outline-success js-create set-target" data-url="{% url 'debts:debts_new' 'lend' %}" data-target="lend"><i class="bi bi-plus"></i>{% translate "Debt" context "debt button" %}</button>
             </div>
         </div>
 
