--- a/project/drinks/templates/drinks/includes/drinks_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_list.html
@@ -7,6 +7,7 @@
     <thead class="thead-light">
         <tr class="top">
             <th>{% translate 'Data' %}</th>
+            <th class="text-end">{% translate 'Dink Type' %}</th>
             <th class="text-end">{% translate 'Quantity' %}</th>
             <th colspan="2"></th>
         </tr>
@@ -15,10 +16,12 @@
         {% for item in items %}
         {% url 'drinks:drinks_update' item.id as url_update %}
         {% url 'drinks:drinks_delete' item.id as url_delete %}
-        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="4" class="table-active"></td></tr>{% endif %}
+        {% ifchanged item.date|date:"F" %}{% if not forloop.first %}<tr><td colspan="5" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
         <tr data-url="{{ url_update }}" class="dblclick">
             <td class="text-start">{{ item.date|date:"Y-m-d" }}</td>
+            {% var drink_type=item.option|title %}
+            <td>{% translate drink_type %}</td>
             <td>{{ item.quantity }}</td>
             {% edit_cell url=url_update %}
             {% delete_cell url=url_delete %}
