--- a/project/drinks/templates/drinks/includes/tbl_consumption.html
+++ b/project/drinks/templates/drinks/includes/tbl_consumption.html
@@ -1,10 +1,12 @@
 {% load cell_format %}
 {% load i18n %}
+{% load slippers %}
 
 <table class="table table-hover stats">
     <thead class="thead-light">
         <tr class="top-text">
-            <th colspan="2">{% translate 'Beer (drunk)' %}</th>
+            {% var drink_type=request.user.drink_type|title %}
+            <th colspan="2">{% translate drink_type %} ({% translate 'drunk' %})</th>
         </tr>
         <tr class="top">
             <th>{% translate 'pcs' %}</th>
