--- a/project/drinks/templates/drinks/includes/drinks_target_form.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_form.html
@@ -1,3 +1,3 @@
 {% load form %}
 {% load i18n %}
-{% generic_form title=_('Goal for the year') update_container='drinks-target-content' %}
+{% generic_form title=_('Goal for the year') update_container='target_list' %}
