--- a/project/drinks/templates/drinks/includes/drinks_target_list.html
+++ b/project/drinks/templates/drinks/includes/drinks_target_list.html
@@ -13,8 +13,8 @@
         {% for item in items %}
         {% url 'drinks:drinks_target_update' item.id as url_update %}
         <tr data-url="{{ url_update }}" class="dblclick">
-            <td>{{ item.quantity }}</td>
-            <td>{{ max_bottles|floatformat:0 }}</td>
+            <td>{{ item.quantity|floatformat:1 }}</td>
+            <td>{{ item.max_bottles|floatformat:0 }}</td>
             <td class="w3"><button type="button" data-url="{{ url_update }}" class="btn btn-super-sm btn-outline-info js-create">{% translate 'Edit' %}</button></td>
         </tr>
         {% empty %}
