clearer table legends

--- a/project/drinks/templates/drinks/includes/tbl_consumption.html
+++ b/project/drinks/templates/drinks/includes/tbl_consumption.html
@@ -9,8 +9,8 @@
             <th colspan="2">{% translate drink_type %} ({% translate 'drunk' %})</th>
         </tr>
         <tr class="top">
-            <th>{% translate 'pcs' %}</th>
-            <th class="text-end">ml</th>
+            <th>{% translate 'Total' %}, {% translate 'pcs' %}</th>
+            <th class="text-end">{% translate 'Per day' %} avg, ml</th>
         </tr>
     </thead>
     <tfoot>
