clearer table legends

--- a/project/drinks/templates/drinks/includes/tbl_consumption.html
+++ b/project/drinks/templates/drinks/includes/tbl_consumption.html
@@ -6,7 +6,7 @@
     <thead class="thead-light">
         <tr class="top-text">
             {% var drink_type=request.user.drink_type|title %}
-            <th colspan="2">{% translate drink_type %} ({% translate 'drunk' %})</th>
+            <th colspan="2">{% translate drink_type %}</th>
         </tr>
         <tr class="top">
             <th>{% translate 'Total' %}, {% translate 'pcs' %}</th>
