--- a/project/drinks/templates/drinks/includes/tbl_std_av.html
+++ b/project/drinks/templates/drinks/includes/tbl_std_av.html
@@ -3,7 +3,7 @@
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
-        <tr class="top-text"><th colspan="5">{% translate 'Average consumption' %}, {% translate 'pcs' %}</th></tr>
+        <tr class="top-text"><th colspan="5">{% translate 'Drunk' %}, {% translate 'pcs' %}</th></tr>
         <tr class="top">
             <th></th>
             <th class="text-end">{% translate 'Total' %}</th>
