small css changes

--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -35,7 +35,7 @@
     }
 
     .table.stats .top > th {
-        border-bottom: 2px solid black!important;
+        border-bottom: 0.15rem solid black!important;
     }
 
     .table.stats .top > th.empty {
