--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -10,6 +10,7 @@
     <script src="{% static 'js/jquery-ui-1.11.3.min.js' %}"></script>
     <script src="https://unpkg.com/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" ntegrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="{% static 'js/htmx.min.js' %}"></script>
 
     {% include 'core/includes/form_date_scripts.html' %}
 
