changes in templates

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -105,7 +105,7 @@
               </button>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item btn-sm" href="{% url 'books:books_all' %}">{% translate 'All records' %}</a>
+                  <a class="dropdown-item btn-sm" href="{% url 'books:books_index' %}?tab=all">{% translate 'All records' %}</a>
                 </li>
               </ul>
             </div>
