--- a/project/books/templates/books/includes/books_list.html
+++ b/project/books/templates/books/includes/books_list.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load slippers %}
 
-{% if items %}
+{% if object_list %}
 
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
@@ -17,26 +17,26 @@
         </tr>
     </thead>
     <tbody>
-        {% for item in items %}
-        {% url 'books:books_update' item.id as url_update %}
-        {% url 'books:books_delete' item.id as url_delete %}
-        {% ifchanged item.started|date:"Y" %}{% if not forloop.first %}<tr><td colspan="8" class="table-active"></td></tr>{% endif %}
+        {% for object in object_list %}
+        {% url 'books:books_update' object.id as url_update %}
+        {% url 'books:books_delete' object.id as url_delete %}
+        {% ifchanged object.started|date:"Y" %}{% if not forloop.first %}<tr><td colspan="8" class="table-active"></td></tr>{% endif %}
         {% endifchanged %}
-        <tr data-url="{{ url_update }}?tab={{ tab }}" class="dblclick{% if not item.ended %} teal{% endif %}">
+        <tr data-url="{{ url_update }}?tab={{ tab }}" class="dblclick{% if not object.ended %} teal{% endif %}">
             <td class="text-start">{{ forloop.revcounter }}</td>
-            <td class="text-start">{{ item.author }}</td>
-            <td class="text-start">„{{ item.title }}”</td>
-            <td class="text-start">{{ item.remark }}</td>
-            <td class="text-center">{{ item.started|date:"Y-m-d" }}</td>
-            <td class="text-center">{{ item.ended|date:"Y-m-d"|default_if_none:'-' }}</td>
-            {% edit_cell url=url_update|add:'?tab='|add:tab %}
-            {% delete_cell url=url_delete|add:'?tab='|add:tab %}
+            <td class="text-start">{{ object.author }}</td>
+            <td class="text-start">„{{ object.title }}”</td>
+            <td class="text-start">{{ object.remark }}</td>
+            <td class="text-center">{{ object.started|date:"Y-m-d" }}</td>
+            <td class="text-center">{{ object.ended|date:"Y-m-d"|default_if_none:'-' }}</td>
+            {% edit_cell url=url_update %}
+            {% delete_cell url=url_delete %}
         </tr>
         {% endfor %}
     </tbody>
 </table>
 
-{% paging url=url page_obj=items page_range=page_range search=search container=update_container %}
+{% paging url=url page_obj=object_list page_range=page_range search=search container=update_container %}
 
 {% else %}
 
