--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -5,7 +5,6 @@
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.src.js"></script>
 <script src="https://code.highcharts.com/modules/bullet.js"></script>
-<script src="{% static 'js/reload_stats.js' %}"></script>
 
 <style>
     .teal {
@@ -17,11 +16,12 @@
 
 {% block content %}
 
-{% if tab == 'index' %}
 <div class="row my-2">
     <div class="col-3 text-start" id="search_form_data">{{ search }}</div>
 
-    <div class="col text-center" id="info_row">{{ info_row }}</div>
+    <div class="col text-center" id="info_row">
+        <div hx-trigger="load" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
+    </div>
 
     <div class="col-3 text-end">
         {% url 'books:books_new' as url_books %}
@@ -32,43 +32,15 @@
 </div>
 
 <div class="row">
-    <div id="book_list" class="col-lg-12">{{ book_list }}</div>
+    <div id="book_list" class="col-lg-12">
+        <div hx-trigger="load" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
+    </div>
 </div>
 
 <div class="row my-2">
-    <div class="col-lg-12" id="chart_readed_books">{% if readed %}{{ chart_readed_books }}{% endif %}</div>
+    <div class="col-lg-12" id="chart_readed_books">
+        <div hx-trigger="load" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
+    </div>
 </div>
-{% endif %}
-
-{% if tab == 'all' %}
-<div class="row my-2">
-    <div id="book_list" class="col-lg-12">{{ book_list }}</div>
-</div>
-{% endif %}
-
-<script src="{% static 'js/search.js' %}"></script>
-<script src="{% static 'js/paging.js' %}"></script>
-
-<script>
-    $(document).on('hidden.bs.modal', '#modal-form', function () {
-        var url = `{% url 'books:reload_stats' %}`;
-
-        $.ajax({
-            url: url,
-            data: {
-                'ajax_trigger': '1',
-                'tab': '{{ tab }}',
-            },
-            success: function (data) {
-                var blocks = [
-                    'info_row',
-                    'chart_readed_books',
-                    'book_list'
-                ];
-                reload_stats(data, blocks);
-            }
-        });
-    });
-</script>
 
 {% endblock content %}
