--- a/project/core/templates/core/includes/modal_form_js.html
+++ b/project/core/templates/core/includes/modal_form_js.html
@@ -5,7 +5,7 @@
         }
     });
 
-    $(document).on('submit', '.js-form', function (e) {
+    $(document).on('submit', '.js_form', function (e) {
         e.preventDefault();
     });
 
