--- a/project/transactions/templates/transactions/includes/savings_change_form.html
+++ b/project/transactions/templates/transactions/includes/savings_change_form.html
@@ -6,7 +6,7 @@
 
 <script>
     $("#id_from_account").change(function () {
-        var url = $("#js-form").attr("data-chained-dropdown");
+        var url = $("#js_form").attr("data-chained-dropdown");
         var id = $(this).val();
 
         $.ajax({
