--- a/project/templates/modal.html
+++ b/project/templates/modal.html
@@ -1,5 +1,3 @@
-<div class="modal fade" id="modal-form" data-target="null">
-    <div class="modal-dialog modal-650">
-        <div class="modal-content"></div>
-    </div>
+<div id="modal" class="modal fade">
+    <div id="dialog" class="modal-dialog modal-650" hx-target="this"></div>
 </div>
