--- a/project/books/templates/books/index.html
+++ b/project/books/templates/books/index.html
@@ -17,29 +17,29 @@
 {% block content %}
 
 <div class="row my-2">
+    [[ {{ request.path }}]]
     <div class="col-3 text-start" id="search_form_data">{{ search }}</div>
 
     <div class="col text-center" id="info_row">
-        <div hx-trigger="load" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
+        <div hx-trigger="load, reloadTrigger from:body" hx-get="{% url 'books:books_info_row' %}" hx-target="this"></div>
     </div>
 
     <div class="col-3 text-end">
-        {% url 'books:books_new' as url_books %}
         {% url 'books:books_target_new' as url_books_target %}
-        <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_books }}"><i class="bi bi-plus"></i>{% translate 'Book' context 'book add button' %}</button>
+        <button type="button" class="btn btn-sm btn-outline-success" hx-get="{% url 'books:books_new' %}" hx-target="#dialog"><i class="bi bi-plus"></i>{% translate 'Book' context 'book add button' %}</button>
         <button type="button" class="btn btn-sm btn-outline-success js-create" data-url="{{ url_books_target }}"><i class="bi bi-plus"></i>{{ year|title }} {% translate 'year goal' %}</button>
     </div>
 </div>
 
 <div class="row">
     <div id="book_list" class="col-lg-12">
-        <div hx-trigger="load" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
+        <div hx-trigger="load, reloadTrigger from:body" hx-get="{% url 'books:books_list' %}{% if all %}?tab=all{% endif %}" hx-target="this"></div>
     </div>
 </div>
 
 <div class="row my-2">
     <div class="col-lg-12" id="chart_readed_books">
-        <div hx-trigger="load" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
+        <div hx-trigger="load, reloadTrigger from:body" hx-get="{% url 'books:books_chart_readed' %}" hx-target="this"></div>
     </div>
 </div>
 
