--- a/project/core/templates/core/includes/form_footer.html
+++ b/project/core/templates/core/includes/form_footer.html
@@ -1,7 +1,7 @@
 {% load i18n %}
     <div class="modal-footer">
-        {% if submit_button %}<button type="button" class="btn btn-sm btn-primary" id="submit">{{ submit_button }}</button>{% endif %}
-        {% if form_action == 'update' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">{% translate 'Update and Close' %}</button>{% endif %}
-        {% if form_action == 'insert' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">{% translate 'Insert and Close' %}</button>{% endif %}
+        {% if submit_button %}<button type="submit" onclick="save()" class="btn btn-sm btn-primary">{{ submit_button }}</button>{% endif %}
+        {% if form_action == 'update' %}<button type="submit" onclick="save_and_close()" class="btn btn-sm btn-primary">{% translate 'Update and Close' %}</button>{% endif %}
+        {% if form_action == 'insert' %}<button type="submit" onclick="save_and_close()" class="btn btn-sm btn-primary">{% translate 'Insert and Close' %}</button>{% endif %}
         <button type="button" class="btn btn-sm btn-secondary" data-bs-dismiss="modal">{% translate 'Close' %}</button>
     </div>
