--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -14,7 +14,7 @@
 
     {% include 'core/includes/form_date_scripts.html' %}
 
-    <script src="{% static 'js/ajax.js' %}"></script>
+    {% comment %} <script src="{% static 'js/ajax.js' %}"></script> {% endcomment %}
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
@@ -225,8 +225,8 @@
         </div>
       </nav>
 
-      {% block content %}{% endblock content %}
       {% include 'modal.html' %}
+      {% block content %}{% endblock content %}
     </div>
     {% endblock body %}
     <script src="{% static 'js/tooltip.js' %}"></script>
